# cheirontakehome

./: .env.example  .gitignore  README.md  pyproject.toml  system-design.md
app/: __init__.py
app/api/: __init__.py  errors.py  main.py  orchestrator.py
app/contracts/: __init__.py  data.py  enums.py  plan.py  request.py  response.py  settings.py  viz.py
app/planner/: __init__.py  client.py  errors.py  prompt.py  schema.py
app/retrieval/: __init__.py  cache.py  client.py  errors.py  parsing.py  query_builder.py  warnings.py
app/transform/: __init__.py  aggregations.py  network.py  provenance.py
app/validation/: __init__.py  validators.py
app/viz/: __init__.py  charts.py  geo.py  network.py  registry.py  vega_templates.py
demo/: README.md  examples.json  index.html
docs/: prd-contracts.md  prd-deliverables.md  prd-integration.md  prd-planner.md  prd-retrieval.md  prd-transform.md  prd-viz.md  system-design.md
docs/schemas/: ErrorResponse.json  VisualizationRequest.json  VisualizationResponse.json
examples/: README.md
examples/enrollment_distribution_melanoma/: note.md  plan.json  request.json  response.json
examples/geo_recruiting_melanoma/: note.md  plan.json  request.json  response.json
examples/phase_distribution_melanoma/: note.md  plan.json  request.json  response.json
examples/sponsor_comparison_conditions/: note.md  plan.json  request.json  response.json
examples/sponsor_drug_network_melanoma/: note.md  plan.json  request.json  response.json
fixtures/raw/: notes.md  (+7 more)
scripts/: capture_examples.py  export_schemas.py  spike_api.py
(+90 files in other folders)
