[project]
name = "ctgov-viz"
version = "0.1.0"
description = "ClinicalTrials.gov query-to-visualization backend — Phase 0 frozen contracts and API skeleton"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "httpx>=0.27",
    "networkx>=3.6.1",
    "numpy>=2.5.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.11",
]

# This is an application, not a distributable library: uv only manages the
# virtualenv and dependencies, it does not try to build/install `app` itself.
# `app` is importable because the project root is on sys.path (see pytest
# `pythonpath` below; uvicorn and `python -c` add the cwd automatically).
[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = [".", "scripts"]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = ["fixtures", "docs/schemas"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
strict = true
warn_unused_configs = true
# Tests and scripts are not part of the frozen-contract gate.
exclude = ["tests/", "scripts/"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
